# hmm-rs

./: .gitignore  Cargo.toml  PLAN.md  plan.md  readline_demo.md  test.hmm
docs/archive/: PLAN.md
src/: actions.rs  app.rs  commands.rs  config.rs  errors.rs  event.rs  io.rs  layout.rs  lib.rs  main.rs  model.rs  parser.rs  ui.rs
src/actions/: clipboard.rs  editing.rs  file.rs  formatting.rs  help.rs  history.rs  mod.rs  movement.rs  node.rs  search.rs  view.rs
src/core/: commands.rs  map.rs  mind_map.rs  mod.rs  node.rs
src/ui/: canvas.rs  connections.rs  constants.rs  help.rs  mindmap.rs  mod.rs  render.rs  status_line.rs  tests.rs  text.rs
tests/: error_handling_tests.rs  fixture_tests.rs  integration_test.rs  save_tests.rs  snapshot_test.rs
tests/common/: mod.rs
tests/fixtures/: complex.hmm  edge_cases.hmm  hidden.hmm  large.hmm  markdown.hmm  project.hmm  simple.hmm  single_node.hmm  symbols.hmm  test_input.hmm  unicode.hmm
tests/snapshots/: snapshot_test__render_deep_tree.snap  snapshot_test__render_edit_mode.snap  snapshot_test__render_empty_mindmap.snap  snapshot_test__render_help_screen.snap  snapshot_test__render_search_mode.snap  snapshot_test__render_simple_tree.snap  snapshot_test__render_very_deep_tree.snap  snapshot_test__render_wide_tree.snap  snapshot_test__render_with_active_node.snap  snapshot_test__render_with_collapsed_node.snap  snapshot_test__render_with_hidden_node.snap  snapshot_test__render_with_message.snap  snapshot_test__render_with_symbols.snap  snapshot_test__render_with_viewport_offset.snap
