[package]
name = "hmm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
dirs = "6.0"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.29"
arboard = "3.5"
unicode-width = "0.2"
thiserror = "2.0"
textwrap = "0.16"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.19"
